--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   <body>
     <div id="tarolo">
       <h1>Nagy Lajos <br />Képtelen természetrajz</h1>
+      <div class="menu">
+        <ul>
+          <a href="index.html">Elefánt</a>
+          <a href="masik_allat.html">Kecske</a>
+        </ul>
+      </div>
       <div class="doboz">
         <h2>Az elefánt (részlet)</h2>
         <div class="bal">
