Javitasok a menu-ben

--- a/masik_allat.html
+++ b/masik_allat.html
@@ -16,7 +16,7 @@
         </ul>
       </div>
       <div class="doboz">
-        <h2>A kecske – a hegyvidék királynője</h2>
+        <h2>A kecske – a hegyvidék királya</h2>
         <div class="bal">
           <img src="kepek/elso.jpg" alt="Kecske" />
         </div>
@@ -26,14 +26,12 @@
           alkalmazkodóképes és intelligens jószág, amely főként tejéért, húsáért
           és szőréért (például a különleges kasmírért vagy moherért) ismert. A
           kecskék kiváló hegymászók: éles patáikkal könnyedén mozognak a
-          meredek, sziklás terepen is. Ezért sok hegyvidéki területen
-          nélkülözhetetlen háziállatnak számítanak, ahol más haszonállatok
-          nehezebben boldogulnának.
+          meredek, sziklás terepen is.
         </p>
       </div>
       <div class="clear"></div>
       <div class="doboz">
-        <h2>Érdekességek a kecskékről:</h2>
+        <h2>Érdekességek az állatokról:</h2>
         <div class="jobb">
           <img src="kepek/masodik.jpg" alt="Kecske" />
         </div>
@@ -48,7 +46,7 @@
       </div>
       <div class="clear"></div>
       <div class="doboz">
-        <h2>Kecske-kaland a dombtetőn</h2>
+        <h2>Kecske-kaland a dombtetején</h2>
         <div class="bal">
           <img src="kepek/harmadik.jpg" alt="Kecske" />
         </div>
